sgd/reproduction/playground/objects/Product2.object
<CustomObject>
    <fields>
        <fullName>SMAX_PS_DescriptionEng__c</fullName>
        <label>仕様（英）</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_EndOfPartsSupply__c</fullName>
        <label>部品供給終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_EndOfSalesDate__c</fullName>
        <label>製品販売終了日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_NameEng__c</fullName>
        <label>品名（英）</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Product_Classification__c</fullName>
        <label>製品区分</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SMAX_PS_Service_Target__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_Product_Classification</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_BMC__c</fullName>
        <label>予算型式コード</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_HTSDelDate__c</fullName>
        <label>HTS基準納期</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_HTSPlantStatus__c</fullName>
        <label>HTSプラントステータス</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Y0</fullName>
                    <label>New/ prohibit Purc.Prod.</label>
                </value>
                <value>
                    <fullName>Y1</fullName>
                    <label>Technical change WIP</label>
                </value>
                <value>
                    <fullName>Y2</fullName>
                    <label>Proc. stoppage</label>
                </value>
                <value>
                    <fullName>Y3</fullName>
                    <label>New/ Prod order HMFR</label>
                </value>
                <value>
                    <fullName>Y4</fullName>
                    <label>New/ Obsolete HMFR</label>
                </value>
                <value>
                    <fullName>Y5</fullName>
                    <label>Std price unknown/ no mvt</label>
                </value>
                <value>
                    <fullName>Y6</fullName>
                    <label>購買禁止（購入不可）</label>
                </value>
                <value>
                    <fullName>YA</fullName>
                    <label>Non RoHS compliant</label>
                </value>
                <value>
                    <fullName>YW</fullName>
                    <label>原価なし</label>
                </value>
                <value>
                    <fullName>YX</fullName>
                    <label>メンテナンス対象外</label>
                </value>
                <value>
                    <fullName>YY</fullName>
                    <label>判別不能(原価あり）</label>
                </value>
                <value>
                    <fullName>YZ</fullName>
                    <label>判別不能</label>
                </value>
                <value>
                    <fullName>Z0</fullName>
                    <label>【国内使用禁止】調達/倉庫に対しブロック中</label>
                </value>
                <value>
                    <fullName>Z1</fullName>
                    <label>新規登録（未リリース）</label>
                </value>
                <value>
                    <fullName>Z2</fullName>
                    <label>再見積必要（送り発生時）</label>
                </value>
                <value>
                    <fullName>Z3</fullName>
                    <label>生産中止警告（メーカー終息部品）</label>
                </value>
                <value>
                    <fullName>Z5</fullName>
                    <label>廃止</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_MaterialCd__c</fullName>
        <externalId>true</externalId>
        <label>SAP品目コード</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_MaterialGroup1__c</fullName>
        <label>補用品フラグ</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ZG0</fullName>
                    <label>最終在庫部品</label>
                </value>
                <value>
                    <fullName>ZG1</fullName>
                    <label>ローテーションモジュール</label>
                </value>
                <value>
                    <fullName>ZG2</fullName>
                    <label>重要部品</label>
                </value>
                <value>
                    <fullName>ZG3</fullName>
                    <label>有寿命部品</label>
                </value>
                <value>
                    <fullName>ZG4</fullName>
                    <label>サービスTOOLS</label>
                </value>
                <value>
                    <fullName>ZG5</fullName>
                    <label>通常部品</label>
                </value>
                <value>
                    <fullName>ZG6</fullName>
                    <label>補用部品</label>
                </value>
                <value>
                    <fullName>ZG7</fullName>
                    <label>特殊部品</label>
                </value>
                <value>
                    <fullName>ZG8</fullName>
                    <label>補助材料</label>
                </value>
                <value>
                    <fullName>ZG9</fullName>
                    <label>アップグレード</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_MaterialType__c</fullName>
        <label>SAP品目タイプ</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ZCE1</fullName>
                    <label>Certificates - AP</label>
                </value>
                <value>
                    <fullName>ZCE2</fullName>
                    <label>Certificates - EMEA</label>
                </value>
                <value>
                    <fullName>ZCE3</fullName>
                    <label>Certificates - US</label>
                </value>
                <value>
                    <fullName>ZEP1</fullName>
                    <label>経費購買品 - AP</label>
                </value>
                <value>
                    <fullName>ZEP2</fullName>
                    <label>経費購買品 - EMEA</label>
                </value>
                <value>
                    <fullName>ZEP3</fullName>
                    <label>経費購買品 - US</label>
                </value>
                <value>
                    <fullName>ZFA1</fullName>
                    <label>固定資産 - AP</label>
                </value>
                <value>
                    <fullName>ZFA2</fullName>
                    <label>固定資産 - EMEA</label>
                </value>
                <value>
                    <fullName>ZFA3</fullName>
                    <label>固定資産 - US</label>
                </value>
                <value>
                    <fullName>ZFP1</fullName>
                    <label>製品 - AP</label>
                </value>
                <value>
                    <fullName>ZFP2</fullName>
                    <label>製品 - EMEA</label>
                </value>
                <value>
                    <fullName>ZFP3</fullName>
                    <label>製品 - US</label>
                </value>
                <value>
                    <fullName>ZMP1</fullName>
                    <label>製造者製品 - AP</label>
                </value>
                <value>
                    <fullName>ZMP2</fullName>
                    <label>製造者製品 - EMEA</label>
                </value>
                <value>
                    <fullName>ZMP3</fullName>
                    <label>製造者製品 - US</label>
                </value>
                <value>
                    <fullName>ZPA1</fullName>
                    <label>梱包材 - AP</label>
                </value>
                <value>
                    <fullName>ZPA2</fullName>
                    <label>梱包材 - EMEA</label>
                </value>
                <value>
                    <fullName>ZPA3</fullName>
                    <label>梱包材 - US</label>
                </value>
                <value>
                    <fullName>ZPH1</fullName>
                    <label>ファントム品 - AP</label>
                </value>
                <value>
                    <fullName>ZPH2</fullName>
                    <label>ファントム品 - EMEA</label>
                </value>
                <value>
                    <fullName>ZPH3</fullName>
                    <label>ファントム品 - US</label>
                </value>
                <value>
                    <fullName>ZPLN</fullName>
                    <label>計画品目</label>
                </value>
                <value>
                    <fullName>ZRA1</fullName>
                    <label>部品 - AP</label>
                </value>
                <value>
                    <fullName>ZRA2</fullName>
                    <label>部品 - EMEA</label>
                </value>
                <value>
                    <fullName>ZRA3</fullName>
                    <label>部品 - US</label>
                </value>
                <value>
                    <fullName>ZSA1</fullName>
                    <label>営業作業 - AP</label>
                </value>
                <value>
                    <fullName>ZSA2</fullName>
                    <label>営業作業 - EMEA</label>
                </value>
                <value>
                    <fullName>ZSA3</fullName>
                    <label>営業作業 - US</label>
                </value>
                <value>
                    <fullName>ZSE1</fullName>
                    <label>サービス設備 - AP</label>
                </value>
                <value>
                    <fullName>ZSE2</fullName>
                    <label>サービス設備 - EMEA</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_PCC__c</fullName>
        <label>PCCコード</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_SAP_PLC__c</fullName>
        <label>PLCコード</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Service_Target__c</fullName>
        <label>対象区分</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_Service_Target</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SMAX_PS_Spec_PLM__c</fullName>
        <label>仕様</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SMAX_PS_Unit_Of_Measure__c</fullName>
        <label>単位（サービス品目）</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>SMAX_PS_Unit_Of_Measure</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Enable_Serialized_Tracking__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicates if stock information for this product is tracked at the serial number level. If this flag is checked, serial number information will be captured in all ServiceMax inventory transactions.</description>
        <inlineHelpText>Flag indicates if stock information for this product is tracked at the serial number level. If this flag is checked, serial number information will be captured in all ServiceMax inventory transactions.</inlineHelpText>
        <label>Enable Serialized Tracking of Stock</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Inherit_Parent_Warranty__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if installed products of this product inherit the parent&apos;s warranty automatically. If not, this product should be linked to a warranty template.</description>
        <inlineHelpText>Indicates if installed products of this product inherit the parent&apos;s warranty automatically. If not, this product should be linked to a warranty template.</inlineHelpText>
        <label>Inherit Parent Warranty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Product_Cost__c</fullName>
        <description>Product cost in the default currency for your organization. Used for computing inventory value in ServiceMax.</description>
        <inlineHelpText>Product cost in the default currency for your organization. Used for computing inventory value in ServiceMax.</inlineHelpText>
        <label>Product Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SVMXC__Product_Line__c</fullName>
        <description>Product Line is another way to classify your products (similar to product family). Typically Product Line applies to a broader group and product family to a specific set of products within a product line.</description>
        <inlineHelpText>Product Line is another way to classify your products (similar to product family).</inlineHelpText>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1000</fullName>
                    <label>製品</label>
                </value>
                <value>
                    <fullName>2000</fullName>
                    <label>機器</label>
                </value>
                <value>
                    <fullName>9999</fullName>
                    <label>部品</label>
                </value>
                <value>
                    <fullName>3000</fullName>
                    <label>作業費</label>
                </value>
                <value>
                    <fullName>4000</fullName>
                    <label>検査機器</label>
                </value>
                <value>
                    <fullName>5000</fullName>
                    <label>その他</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Product_Type__c</fullName>
        <description>Picklist values here will be matched with similar field in Custom Coverage object to find applicable coverage</description>
        <label>Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1000</fullName>
                    <label>製品</label>
                </value>
                <value>
                    <fullName>2000</fullName>
                    <label>機器</label>
                </value>
                <value>
                    <fullName>9999</fullName>
                    <label>部品</label>
                </value>
                <value>
                    <fullName>3000</fullName>
                    <label>作業費</label>
                </value>
                <value>
                    <fullName>4000</fullName>
                    <label>検査機器</label>
                </value>
                <value>
                    <fullName>5000</fullName>
                    <label>その他</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Replacement_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicates if there are any replacement products defined for this product. Set automatically by Manage Replacements feature</description>
        <inlineHelpText>Flag indicates if there are any replacement products defined for this product. Set automatically by Manage Replacements feature</inlineHelpText>
        <label>Replacement Available?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_Enable_Batch_Lot_Tracking__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Select this checkbox to indicate the stock information for this product is tracked at the batch/lot level. If this flag is checked, batch/lot number information will be captured in all ServiceMax inventory transactions.</description>
        <label>Enable Batch/Lot Tracking</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__SM_External_ID__c</fullName>
        <description>External System Unique ID</description>
        <externalId>true</externalId>
        <inlineHelpText>External System Unique ID</inlineHelpText>
        <label>External Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SVMXC__Select__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Select</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Stockable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag indicates if this product is stockable. ServiceMax does not maintain inventory of non-stockable products.</description>
        <inlineHelpText>Flag indicates if this product is stockable. ServiceMax does not maintain inventory of non-stockable products.</inlineHelpText>
        <label>Stockable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SVMXC__Tracking__c</fullName>
        <description>If and how this product is tracked when sold to customers. Serialized products are tracked by unique serial numbers. Lot/Batch tracked items are identified by the batch or lot numbers. Non-tracked items do not have a lot or serial number.</description>
        <inlineHelpText>If and how this product is tracked when sold to customers. Serialized products are tracked by unique serial numbers. Lot/Batch tracked items are identified by the batch or lot numbers. Non-tracked items do not have a lot or serial number.</inlineHelpText>
        <label>Tracking</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Serialized</fullName>
                </value>
                <value>
                    <fullName>Lot/Batch Tracked</fullName>
                </value>
                <value>
                    <fullName>Non-Tracked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMXC__Unit_Of_Measure__c</fullName>
        <description>Unit of measure for this product</description>
        <inlineHelpText>Unit of measure for this product</inlineHelpText>
        <label>Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Each</fullName>
                    <default>true</default>
                    <label>Each</label>
                </value>
                <value>
                    <fullName>Gallon</fullName>
                </value>
                <value>
                    <fullName>Box</fullName>
                </value>
                <value>
                    <fullName>Pounds</fullName>
                </value>
                <value>
                    <fullName>Liter</fullName>
                </value>
                <value>
                    <fullName>Dozen</fullName>
                </value>
                <value>
                    <fullName>Kilogram</fullName>
                </value>
                <value>
                    <fullName>Ton</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SVMX_PS_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>外部キー</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>AllProducts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Products</label>
    </listViews>
    <recordTypes>
        <fullName>SMAX_PS_Product</fullName>
        <active>true</active>
        <label>SVMX Product</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>SMAX_PS_New_Product_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
ISNEW(),
NOT(ISNULL(SMAX_PS_SAP_MaterialCd__c)),
NOT(ISBLANK(SMAX_PS_SAP_MaterialCd__c)),
$Profile.Name &lt;&gt; &apos;System Administrator&apos;,
$Profile.Name &lt;&gt; &apos;システム管理者&apos;,
$Profile.Name &lt;&gt; &apos;ServiceMax Background User&apos;,
$Profile.Name &lt;&gt; &apos;システム管理者(ベンダー)&apos;
)</errorConditionFormula>
        <errorMessage>SAP管理の商品をSAPにて新規登録ください。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SMAX_PS_New_Product_Validation_BkUp</fullName>
        <active>false</active>
        <errorConditionFormula>AND
(
ISNEW(),
NOT(ISNULL(SMAX_PS_SAP_MaterialCd__c)),
NOT(ISBLANK(SMAX_PS_SAP_MaterialCd__c)),
$Profile.Name &lt;&gt; &apos;System Administrator&apos;,
$Profile.Name &lt;&gt; &apos;システム管理者(ベンダー)&apos;
)</errorConditionFormula>
        <errorMessage>SAP管理の商品をSAPにて新規登録ください。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SMAX_PS_Product_Mastered_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND
(
NOT(ISNULL(SMAX_PS_SAP_MaterialCd__c)),
NOT(ISBLANK(SMAX_PS_SAP_MaterialCd__c)),
$Profile.Name &lt;&gt; &apos;System Administrator&apos;,
$Profile.Name &lt;&gt; &apos;システム管理者&apos;,
$Profile.Name &lt;&gt; &apos;ServiceMax Background User&apos;,
$Profile.Name &lt;&gt; &apos;システム管理者(ベンダー)&apos;,
OR
(
ISCHANGED(Name),
ISCHANGED(ProductCode),
ISCHANGED(Description),
ISCHANGED(SVMXC__Product_Type__c),
ISCHANGED(SMAX_PS_SAP_MaterialCd__c),
ISCHANGED(SMAX_PS_SAP_MaterialType__c),
ISCHANGED(SMAX_PS_SAP_PCC__c),
ISCHANGED(SMAX_PS_SAP_PLC__c),
ISCHANGED(SMAX_PS_SAP_BMC__c),
ISCHANGED(SMAX_PS_SAP_MaterialGroup1__c),
ISCHANGED(SMAX_PS_SAP_HTSDelDate__c),
ISCHANGED(SMAX_PS_SAP_HTSPlantStatus__c),
ISCHANGED(SMAX_PS_Spec_PLM__c)

)
)</errorConditionFormula>
        <errorMessage>SAP管理の商品なのでSAPにて編集ください。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SMAX_PS_Product_Mastered_Validation_BkUp</fullName>
        <active>false</active>
        <errorConditionFormula>AND
(
NOT(ISNULL(SMAX_PS_SAP_MaterialCd__c)),
NOT(ISBLANK(SMAX_PS_SAP_MaterialCd__c)),
$Profile.Name &lt;&gt; &apos;System Administrator&apos;,
$Profile.Name &lt;&gt; &apos;システム管理者(ベンダー)&apos;,
OR
(
ISCHANGED(Name),
ISCHANGED(ProductCode),
ISCHANGED(Description),
ISCHANGED(SVMXC__Product_Type__c),
ISCHANGED(SMAX_PS_SAP_MaterialCd__c),
ISCHANGED(SMAX_PS_SAP_MaterialType__c),
ISCHANGED(SMAX_PS_SAP_PCC__c),
ISCHANGED(SMAX_PS_SAP_PLC__c),
ISCHANGED(SMAX_PS_SAP_BMC__c),
ISCHANGED(SMAX_PS_SAP_MaterialGroup1__c),
ISCHANGED(SMAX_PS_SAP_HTSDelDate__c),
ISCHANGED(SMAX_PS_SAP_HTSPlantStatus__c),
ISCHANGED(SMAX_PS_Spec_PLM__c)

)
)</errorConditionFormula>
        <errorMessage>SAP管理の商品なのでSAPにて編集ください。</errorMessage>
    </validationRules>
</CustomObject>